--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<ApplicationUser> SignInManager;
+@inject UserManager<ApplicationUser> UserManager;
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +11,16 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@if (User.IsInRole("Admin"))
+{
+    <h1>Hi Admin</h1>
+}
+else if (User.IsInRole("Manager"))
+{
+    <h1>Hi Manager</h1>
+} else
+{
+    
+<h1>Hi Member</h1>
+}
