--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,9 +7,11 @@
     ViewData["Title"] = "Home Page";
 }
 
+<partial name="_NavBar" />
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>全ユーザー用ページ</p>
 </div>
 
 @if (User.IsInRole("Admin"))
