--- a/wwwroot/css/common.scss
+++ b/wwwroot/css/common.scss
@@ -1,6 +1,5 @@
 html {
-    font-size: 14px;
-}
+    height:100%;
 
 @media (min-width: 768px) {
     html {
@@ -8,11 +7,7 @@ html {
     }
 }
 
-html {
-    position: relative;
-    min-height: 100%;
-}
 
 body {
-    margin-bottom: 60px;
+    height:100%;
 }
