--- a/wwwroot/css/common.css
+++ b/wwwroot/css/common.css
@@ -1,17 +1,12 @@
 ﻿html {
-  font-size: 14px;
+  height: 100%;
 }
-
 @media (min-width: 768px) {
-  html {
+  html html {
     font-size: 16px;
   }
 }
-html {
-  position: relative;
-  min-height: 100%;
-}
 
 body {
-  margin-bottom: 60px;
+  height: 100%;
 }
