--- a/Views/Home/Members.cshtml
+++ b/Views/Home/Members.cshtml
@@ -14,6 +14,14 @@
     </div>
 }
 
+@if (TempData["AlertError"] != null)
+{
+    <div class="alert alert-danger alert-dismissable fade show m-1" role="alert">
+        @TempData["AlertError"]
+        <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
     <a class="btn btn-primary" asp-area="Identity" asp-page="/Account/Register">Add New User</a>
 
 
@@ -29,6 +37,10 @@
         <p>@item.Email</p>
         <p>@item.Department</p>
         <a asp-action="Details" asp-route-id="@item.Id" class="text-center">Detail</a>
+        <form asp-action="Delete" onSubmit="return check()">
+            <input type="hidden" name="id" value="@item.Id" />
+            <input type="submit" value="削除" class="btn btn-danger" />
+        </form>
         <p>---------------------</p>
     }
 
@@ -36,10 +48,21 @@
     {
         if (TempData["Department"].Equals(item.Department))
         {
+            if (item.Email.Equals(User.Identity.Name))
+            {
+                <p>@item.LastName @item.FirstName</p>
+                <p>@item.Email</p>
+                <p>@item.Department</p>
+                <a asp-action="Details" asp-route-id="@item.Id" class="text-center">Detail</a>
+            }
             <p>@item.LastName @item.FirstName</p>
             <p>@item.Email</p>
             <p>@item.Department</p>
             <a asp-action="Details" asp-route-id="@item.Id" class="text-center">Detail</a>
+            <form asp-action="Delete" onSubmit="return check()">
+                <input type="hidden" name="id" value="@item.Id" />
+                <input type="submit" value="削除" class="btn btn-danger" />
+            </form>
             <p>---------------------</p>
             
         }
@@ -48,3 +71,14 @@
 
 
 }
+
+<script>
+    function check() {
+        if (window.confirm('このユーザーを削除しますか？')) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+</script>
