--- a/Views/Home/Members.cshtml
+++ b/Views/Home/Members.cshtml
@@ -55,14 +55,19 @@
                 <p>@item.Department</p>
                 <a asp-action="Details" asp-route-id="@item.Id" class="text-center">Detail</a>
             }
-            <p>@item.LastName @item.FirstName</p>
-            <p>@item.Email</p>
-            <p>@item.Department</p>
-            <a asp-action="Details" asp-route-id="@item.Id" class="text-center">Detail</a>
-            <form asp-action="Delete" onSubmit="return check()">
-                <input type="hidden" name="id" value="@item.Id" />
-                <input type="submit" value="削除" class="btn btn-danger" />
-            </form>
+
+            else
+            {
+                <p>@item.LastName @item.FirstName</p>
+                <p>@item.Email</p>
+                <p>@item.Department</p>
+                <a asp-action="Details" asp-route-id="@item.Id" class="text-center">Detail</a>
+                <form asp-action="Delete" onSubmit="return check()">
+                    <input type="hidden" name="id" value="@item.Id" />
+                    <input type="submit" value="削除" class="btn btn-danger" />
+                </form>
+            }
+
             <p>---------------------</p>
             
         }
