--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,9 +28,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Index</a>
                         </li>
+                        @{
+                            @using Microsoft.AspNetCore.Identity;
+                            @using System.Security.Claims;
+                            var loginUserId = User.FindFirstValue(ClaimTypes.NameIdentifier);
+                        }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Members">Members</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-route-id="@loginUserId" asp-action="Details">My Page</a>
                         </li>
+                        @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Members">Members</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
