--- a/Views/Moods/Create.cshtml
+++ b/Views/Moods/Create.cshtml
@@ -1,5 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Mismo.Models.Mood;
+@using Microsoft.AspNetCore.Identity;
+@using System.Security.Claims;
+
 @{
+    ViewData["Title"] = "Create";
+    var loginUserId = User.FindFirstValue(ClaimTypes.NameIdentifier);
 }
+
+<h1>今日の気分を登録しましょう！</h1>
+<form method="post" action="">
+    <div class="form-group">
+        <label class="control-label">気分</label>
+        <input name="values" type="radio" value="1" /> <img class="select-icon" src="/images/bad.png"/>
+        <input name="values" type="radio" value="2" /> <img class="select-icon" src="/images/soso.png" />
+        <input name="values" type="radio" value="3" checked /> <img class="select-icon" src="/images/fine.png">
+        <input name="values" type="radio" value="4" /> <img class="select-icon" src="/images/good.png" />
+        <input name="values" type="radio" value="5" /> <img class="select-icon" src="/images/great.png" />
+    </div>
+    <div class="form-group">
+        <label class="control-label">コメント</label>
+        <input name="values" class="form-control" placeholder="なにか一言あればどうぞ"/>
+    </div>
+    <div class="form-group">
+        <input name="values" type="hidden" class="form-control" value="@loginUserId" />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="登録" class="btn btn-primary" />
+    </div>
+</form>
