--- a/Views/Home/Users.cshtml
+++ b/Views/Home/Users.cshtml
@@ -2,9 +2,9 @@
 @model IEnumerable<Mismo.Models.ApplicationUser>;
 
 @{
-    ViewData["Title"] = "Members";
+    ViewData["Title"] = "Users";
 }
-<h1>メンバーリスト</h1>
+<h1>ユーザーリスト</h1>
 
 @if (TempData["AlertMessage"] != null)
 {
@@ -29,22 +29,22 @@
 
 
 <p>ユーザー一覧</p>
-@foreach (var item in Model)
+@foreach (var user in Model)
 {
-    @if (User.IsInRole("Admin"))
-    {
-        <p>@item.LastName @item.FirstName</p>
-        <p>@item.Email</p>
-        <p>@item.Department</p>
-        <a asp-action="Details" asp-route-id="@item.Id" class="text-center">Detail</a>
+    
+        <p>@user.LastName @user.FirstName</p>
+        <p>@user.Email</p>
+        <p>@user.Role</p>
+        <p>@user.Department</p>
+        <a asp-action="Details" asp-route-id="@user.Id" class="text-center">Detail</a>
         <form asp-action="Delete" onSubmit="return check()">
-            <input type="hidden" name="id" value="@item.Id" />
+            <input type="hidden" name="id" value="@user.Id" />
             <input type="submit" value="削除" class="btn btn-danger" />
         </form>
         <p>---------------------</p>
-    }
 
-    else if (User.IsInRole("Manager"))
+
+   @*  else if (User.IsInRole("Manager"))
     {
         if (TempData["Department"].Equals(item.Department))
         {
@@ -72,7 +72,7 @@
             
         }
 
-    }
+    } *@
 
 
 }
