--- a/Views/Moods/Index.cshtml
+++ b/Views/Moods/Index.cshtml
@@ -97,7 +97,7 @@
 
     }
 }
-else if (User.IsInRole("Manager"))
+@* else if (User.IsInRole("Manager"))
 {
     @foreach (var peruser in Model.Users)
     {
@@ -136,7 +136,7 @@ else if (User.IsInRole("Manager"))
 
     }
 
-}
+} *@
 
 <script>
     function check() {
