--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -32,7 +32,7 @@
                     <label asp-for="Input.FirstName"></label>
                     <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
-                <div class="form-floating">
+                @* <div class="form-floating">
                     @if (User.IsInRole("Admin"))
                     {
                         <input asp-for="Input.Department" class="form-control" aria-required="true" />
@@ -43,7 +43,7 @@
 
                     <label asp-for="Input.Department"></label>
                     <span asp-validation-for="Input.Department" class="text-danger"></span>
-                </div>
+                </div> *@
                 <div class="form-floating">
                     @if (User.IsInRole("Admin"))
                     {
