--- a/Views/Departments/Create.cshtml
+++ b/Views/Departments/Create.cshtml
@@ -1,5 +1,38 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Mismo.Models.Department;
+
 @{
 }
+
+@if (TempData["AlertDepartmentCreate"] != null)
+{
+    <div class="alert alert-success alert-dismissable fade show m-1" role="alert">
+        @TempData["AlertDepartmentCreate"]
+        <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+@if (TempData["AlertDepartmentError"] != null)
+{
+    <div class="alert alert-danger alert-dismissable fade show m-1" role="alert">
+        @TempData["AlertDepartmentError"]
+        <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+<div class="container-uindex">
+    <h1 class="text-center">部門作成</h1>
+
+    <div class="container-form">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label class="control-label">部門名</label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="作成" class="w-100 btn btn-lg btn-warning" />
+            </div>
+        </form>
+        <a asp-action="Index">部門一覧に戻る</a>
+    </div>
+</div>
