--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -44,18 +44,15 @@
                     <label asp-for="Input.Department"></label>
                     <span asp-validation-for="Input.Department" class="text-danger"></span>
                 </div> *@
+                <div class="form-group">
+                    <label class="control-label">部門</label>
+                    <select class="form-control" asp-items="ViewBag.Departments" name="depSelect"></select>
+                </div>
                 <div class="form-floating">
-                    @if (User.IsInRole("Admin"))
-                    {
                         <select asp-for="Input.Role" class="form-control" aria-required="true">
                             <option>Member</option>
                             <option>Manager</option>
                         </select>
-                    } else if (User.IsInRole("Manager"))
-                    {
-                      <input asp-for="Input.Role" class="form-control" aria-required="true" value="Member" disabled/>  
-                    }
-
                     <label asp-for="Input.Role"></label>
                     <span asp-validation-for="Input.Role" class="text-danger"></span>
                 </div>
