--- a/Views/Departments/Index.cshtml
+++ b/Views/Departments/Index.cshtml
@@ -18,7 +18,7 @@
     {
         <p>@dp.Name</p>
 
-        <a class="btn btn-primary" asp-action="Details">参加者一覧</a>
+        <a class="btn btn-primary" asp-action="Details" asp-route-id="@dp.DepartmentId">参加者一覧</a>
         <a class="btn btn-primary" asp-action="Edit" asp-route-id="@dp.DepartmentId">編集</a>
         <form asp-controller="Departments" asp-action="Delete" onSubmit="return check()">
             <input type="hidden" name="id" value="@dp.DepartmentId" />
