--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -1,5 +1,25 @@
-﻿@{
-    ViewData["Title"] = "Home";
+﻿@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<ApplicationUser> SignInManager;
+@inject UserManager<ApplicationUser> UserManager;
+
+@{
+    ViewData["Title"] = "Home Page";
 }
 
-<p>ランディングページにする予定</p>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>全ユーザー用ページ</p>
+</div>
+
+@if (User.IsInRole("Admin"))
+{
+    <h1>Hi Admin</h1>
+}
+else if (User.IsInRole("Manager"))
+{
+    <h1>Hi Manager</h1>
+} else
+{    
+<h1>Hi Member</h1>
+}
