--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,22 +26,28 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Home">Home</a>
                         </li> *@
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Index</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Home">Home</a>
                         </li>
                         @{
                             @using Microsoft.AspNetCore.Identity;
                             @using System.Security.Claims;
                             var loginUserId = User.FindFirstValue(ClaimTypes.NameIdentifier);
                         }
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-route-id="@loginUserId" asp-action="Details">My Page</a>
-                        </li>
-                        @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+                        
+                        @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Users">Users</a>
                             </li>
+                        } else if (User.IsInRole("Manager"))
+                        {
+
+                        } else if (User.IsInRole("Member")){
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-route-id="@loginUserId" asp-action="Details">My Page</a>
+                            </li>
                         }
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
