--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,10 +41,16 @@
                             </li>
                         } else if (User.IsInRole("Manager"))
                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MgrMain">Main Page</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MgrIndex">Members</a>
+                            </li>
 
                         } else if (User.IsInRole("Member")){
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-route-id="@loginUserId" asp-action="Details">My Page</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MemMain">Main Page</a>
                             </li>
                         }
 
