--- a/Views/Home/MemMain.cshtml
+++ b/Views/Home/MemMain.cshtml
@@ -2,13 +2,14 @@
 @{
 }
 
-<h1>User detail page</h1>
+<h1>Member Main page</h1>
 
 @Model.FirstName
 
 <p>今日の気分が登録されていないアラート</p>
 <p>新着メッセージが来ている場合にアラート</p>
 <p>未達成の目標内容と達成までの残り日数表示</p>
+<p>所属プロジェクトと報告先マネージャー名表示</p>
 <a asp-controller="Moods" asp-action="Index">気分</a>
 <p></p>
 
